--- a/mysite/articles/templates/articles/new.html
+++ b/mysite/articles/templates/articles/new.html
@@ -6,10 +6,12 @@
   <!-- method를 POST로 할 경우 csrf_token 추가 -->
   {% csrf_token %} 
   <label for="name">제목 : </label>
-  <input type="text" id="name" name="title">
+  <input type="text" id="name" name="title" placeholder="여기에 제목을 입력해주세요">
 
   <label for="cnt">내용 : </label>
-  <input type="text" id="cnt" name="content">
+  <textarea id="cnt" name="content" cols="30" rows="10">
+    여기에 내용을 입력해 주세요
+  </textarea>
 
   <input type="submit" value="글 작성">
 </form>
