--- a/mysite/articles/templates/articles/edit.html
+++ b/mysite/articles/templates/articles/edit.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block body %}
-<h1>글 작성 페이지</h1>
+<h1>글 수정 페이지</h1>
 <hr>
 <form action="{% url 'articles:update' article.pk %}" method="POST">
   <!-- method를 POST로 할 경우 csrf_token 추가 -->
@@ -9,7 +9,9 @@
   <input type="text" id="name" name="title" value="{{ article.title }}">
 
   <label for="cnt">내용 : </label>
-  <input type="text" id="cnt" name="content" value="{{ article.content }}">
+  <textarea id="cnt" name="content" cols="30" rows="10">
+    {{ article.content }}
+  </textarea>
 
   <input type="submit" value="글 수정">
 </form>
